# pixiv-file-manager

./: .eslintrc.cjs  .gitignore  README.md  components.json  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
src-tauri/: .env.example  Cargo.toml  tauri.conf.json
src-tauri/bindings/: AssociateCharacter.ts  AssociateInfo.ts  AssociateSaveDir.ts  AuthorInfo.ts  CharacterInfo.ts  CollectSummary.ts  DirDetail.ts  EditTag.ts  EditTagReq.ts  EnvConfig.ts  ExecuteResult.ts  FileCounts.ts  FileDetail.ts  FileSummary.ts  FolderCount.ts  GeneralResponse.ts  IdInfo.ts  ProcessStats.ts  SaveDirInfo.ts  SearchHistory.ts  SearchResult.ts  TagAssignment.ts  TagFixRule.ts  TagFixRuleAction.ts  TagInfo.ts  TagProgress.ts  UniqueTagList.ts
src-tauri/src/: _main.rs  api.rs  commands.rs  constants.rs  main.rs  models.rs  service.rs  util.rs
src-tauri/src/api/: pixiv.rs  windows.rs
src-tauri/src/commands/: catalog.rs  collect.rs  fetch.rs  fetch_tags.rs  manage.rs  search.rs  search_tags.rs  settings.rs
src-tauri/src/commands/sql/: update_after_count.sql
src-tauri/src/errors/: db.rs  parse.rs
src-tauri/src/models/: catalog.rs  collect.rs  common.rs  fetch.rs  global.rs  manage.rs  pixiv.rs  search.rs  settings.rs
src-tauri/src/service/: catalog.rs  collect.rs  common.rs  fetch.rs  manage.rs  mod.rs  search.rs  setting.rs
src-tauri/src/sql/: collect_character_info.sql  collect_illust_detail.sql  collect_illust_info.sql  initialize_db.sql  merge_cnum.sql  prepare_collect_filter_work.sql  prepare_collect_ui_work.sql  prepare_collect_work.sql  resort_collect_work_ids.sql  sort_collect_work.sql  update_after_count.sql  update_cnum.sql  update_control_num.sql  update_illust_detail_from_collect_work.sql
src-tauri/src/sql/catalog/: delete_file_registration.sql  get_associated_info.sql  init_temp_edit_tags.sql  insert_tmp_label_character.sql  insert_tmp_label_target.sql  overwrite_tags_individual.sql  overwrite_tags_linked.sql  prepare_tmp_associated_files.sql  prepare_tmp_label_character.sql  prepare_tmp_label_target.sql  prepare_tmp_target_files.sql  update_character_indivisual.sql  update_character_info.sql  update_character_linked.sql
src-tauri/src/sql/collect/: collect_character_info.sql  collect_illust_detail.sql  collect_illust_info.sql  delete_collect_filter_work.sql  get_available_unique_tags.sql  get_collect_summary.sql  get_related_tags.sql  insert_collect_filter_work_character.sql  insert_collect_filter_work_series.sql  move_illust_files.sql  prepare_collect_filter_work.sql  prepare_collect_ui_work.sql  prepare_tmp_move_candidates.sql  process_sync_db.sql  sort_collect_work.sql  update_after_count.sql  update_from_move_candidates.sql
src-tauri/src/sql/fetch/: delete_missing_tags.sql  extract_missing_files.sql  insert_illust_info.sql  (+3 more)
(+152 files in other folders)
