[package]
name = "pixiv-file-manager"
version = "0.1.0"
description = "An explorer-like app to manage files downloaded from Pixiv"
authors = ["minato8080"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pixiv_file_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.34.0", features = ["bundled", "functions"] }
tauri-plugin-dialog = "2"
reqwest = { version = "0.11", features = ["json", "blocking", "cookies"] }
once_cell = "1.21.3"
dirs = "6.0.0"
anyhow = "1.0.97"
chrono = "0.4.40"
image = "0.25.6"
pixieve-rs = { git = "https://github.com/minato8080/rustpixiv" }
dotenv = "0.15.0"
ts-rs = "10.1.0"
trash = "5.2.2"
walkdir = "2.5.0"
regex = "1.11.1"
dotenvy = "0.15.7"
base64 = "0.22.1"
rand = "0.9.2"
sha2 = "0.10.9"
url = "2.5.7"
tokio = "1.47.1"
fern = "0.7.1"
log = "0.4.28"
